// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils test suite getSite test suite should return SuperOffice site 1`] = `
{
  "baseId": "superoffice",
  "displayPoweredBySesam": false,
  "html": "making-service-talk-logo.html",
  "id": "superoffice",
  "isBrandLogo": false,
  "loginSubTitle": "Log in to Making SuperOffice Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/superoffice/superoffice-ulp-header-logo.svg",
  "name": "SuperOffice",
  "signupSubTitle": "Sign up Making to SuperOffice Talk.",
}
`;

exports[`utils test suite getSite test suite should return SuperOffice-test site 1`] = `
{
  "baseId": "superoffice",
  "displayPoweredBySesam": false,
  "html": "making-service-talk-logo.html",
  "id": "superoffice-test",
  "isBrandLogo": false,
  "loginSubTitle": "Log in to Making SuperOffice Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/superoffice/superoffice-ulp-header-logo.svg",
  "name": "SuperOffice",
  "signupSubTitle": "Sign up Making to SuperOffice Talk.",
}
`;

exports[`utils test suite getSite test suite should return Wave site 1`] = `
{
  "displayPoweredBySesam": false,
  "html": "making-service-talk-logo.html",
  "id": "wave",
  "isBrandLogo": false,
  "loginSubTitle": "Log in to Making Wave Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/wave/making-wave-talk-logo-centered.svg",
  "name": "Wave",
  "signupSubTitle": "Sign up to Making Wave Talk.",
}
`;

exports[`utils test suite getSite test suite should return default site 1`] = `
{
  "displayPoweredBySesam": true,
  "id": "sesam",
  "loginSubTitle": "Log in to Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/sesam/sesam-talk-rgb.png",
  "name": "Sesam",
  "signupSubTitle": "Sign up to Talk to continue to Talk.",
}
`;

exports[`utils test suite getSite test suite should return powerofficego site 1`] = `
{
  "baseId": "powerofficego",
  "displayPoweredBySesam": false,
  "html": "powerofficego-logo.html",
  "id": "powerofficego",
  "loginSubTitle": "Log in to PowerOffice DataSync.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/poweroffice/poweroffice-new-logo.png",
  "name": "PowerOffice",
  "signupSubTitle": "Sign up to PowerOffice DataSync.",
}
`;

exports[`utils test suite getSite test suite should return powerofficego-test site 1`] = `
{
  "baseId": "powerofficego",
  "displayPoweredBySesam": false,
  "html": "powerofficego-logo.html",
  "id": "powerofficego-test",
  "loginSubTitle": "Log in to PowerOffice DataSync.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/poweroffice/poweroffice-new-logo.png",
  "name": "PowerOffice",
  "signupSubTitle": "Sign up to PowerOffice DataSync.",
}
`;

exports[`utils test suite getSite test suite should return sesam site 1`] = `
{
  "displayPoweredBySesam": true,
  "id": "sesam",
  "loginSubTitle": "Log in to Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/sesam/sesam-talk-rgb.png",
  "name": "Sesam",
  "signupSubTitle": "Sign up to Talk to continue to Talk.",
}
`;
